--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,7 @@ runs:
     - id: current
       uses: edwardgeorge/jq-action@aa5526c42ec65275c6f703333120eee7fc20fe33
       with:
-        input: ${{ fromJson(inputs.stacks) }}
+        input: ${{ inputs.stacks }}
         script: |-
           sort_by(${{ inputs.sort-by }}) | 
           group_by(${{ inputs.group-by }}) |
