--- a/.github/workflows/test-negative.yml
+++ b/.github/workflows/test-negative.yml
@@ -1,10 +1,10 @@
 name: Test example negative
 on:
-#  # Uncomment when test added first time to register workflow and comment it back after workflow would be registered
-#  #
-#  # Added pull_request to register workflow from the PR.
-#  # Read more https://stackoverflow.com/questions/63362126/github-actions-how-to-run-a-workflow-created-on-a-non-master-branch-from-the-wo
-#  pull_request: {}
+  #  # Uncomment when test added first time to register workflow and comment it back after workflow would be registered
+  #  #
+  #  # Added pull_request to register workflow from the PR.
+  #  # Read more https://stackoverflow.com/questions/63362126/github-actions-how-to-run-a-workflow-created-on-a-non-master-branch-from-the-wo
+  #  pull_request: {}
   workflow_dispatch: {}
 
 jobs:
@@ -16,8 +16,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [setup]
     continue-on-error: true
+    needs: [setup]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,10 +25,12 @@ jobs:
       - uses: ./
         id: current
         with:
-          param1: 'false'
+          stacks: "[]"
+          sort-by: '.stack_slug'
+          group-by: '.stack_slug | split("-") | [.[0], .[2]] | join("-")'
 
     outputs:
-      result: "${{ steps.current.outputs.result1 }}"
+      result: "${{ steps.current.outputs.result }}"
 
   assert:
     runs-on: ubuntu-latest
@@ -36,8 +38,8 @@ jobs:
     steps:
       - uses: nick-fields/assert-action@v1
         with:
-          expected: 'false'
-          actual: "${{ needs.test.outputs.result }}"
+          expected: '{"include":[]}'
+          actual: ${{ needs.test.outputs.result }}
 
   teardown:
     runs-on: ubuntu-latest
