--- a/action.yml
+++ b/action.yml
@@ -32,8 +32,8 @@ runs:
 
     - id: current
       shell: bash
-      run: |-
-        QUERY=$(cat << EOM
+      env:
+        QUERY: |-
           sort_by(${{ inputs.sort-by }}) | 
           group_by(${{ inputs.group-by }}) |
           map({
@@ -45,8 +45,8 @@ runs:
               }) | { "include": . } | tostring
             )
           }) | {"include": .}        
-        EOM
-        )
+          
+      run: |-
         echo "${QUERY}"
 
         RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M ${QUERY//\\n/ })
