--- a/action.yml
+++ b/action.yml
@@ -47,7 +47,7 @@ runs:
           }) | {"include": .}        
           
       run: |-
-        echo "${QUERY}"
+        echo "${QUERY//\\n/ }"
 
         RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M ${QUERY//\\n/ })
 
