--- a/action.yml
+++ b/action.yml
@@ -47,9 +47,9 @@ runs:
           }) | {"include": .}        
           
       run: |-
-        echo "${QUERY//\\n/ }"
+        echo "${QUERY//$'\n'/ }"
 
-        RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M ${QUERY//\\n/ })
+        RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M ${QUERY//$'\n'/ })
 
         echo "output=${RESULT}" >> $GITHUB_OUTPUT
   
