--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,8 @@ runs:
           }) | {"include": .}        
           
       run: |-
+        QUERY=$(echo "${QUERY}" | tr '\n' ' ')
+        echo "${QUERY}"
         RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M '${QUERY}'
 
         echo "output=${RESULT}" >> $GITHUB_OUTPUT
