--- a/action.yml
+++ b/action.yml
@@ -48,8 +48,7 @@ runs:
           
       run: |-
         QUERY=$(echo "${QUERY}" | tr '\n' ' ')
-        echo "${QUERY}"
-        RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M '${QUERY}'
+        RESULT=$(echo "${{ inputs.stacks }}" | jq -c -M '${QUERY}')
 
         echo "output=${RESULT}" >> $GITHUB_OUTPUT
   
