Test long argument error

--- a/.github/workflows/test-long-args.yml
+++ b/.github/workflows/test-long-args.yml
@@ -4455,7 +4455,7 @@ jobs:
 
     outputs:
       result: "${{ steps.current.outputs.result }}"
-      outcome: "${{ steps.current.outputs.outcome }}"
+      outcome: "${{ steps.current.outcome }}"
 
   assert:
     runs-on: ubuntu-latest
